name:                reflex-dhtmlx
version:             0.1
synopsis:            Reflex wrapper for DHTMLX widgets
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          info@takt.com
copyright:           Takt Inc
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  include-dirs: include
  js-sources:
    -- Order is important (the reverse of what you think)
    lib/dhtmlxcalendar.js
  exposed-modules:
    Reflex.Dom.DHTMLX.Date
    Reflex.Dom.DHTMLX.DateTime
  
  other-modules:
    GHCJS.Compat
    Reflex.Dom.DHTMLX.Common
  
  build-depends:
      base         >= 4.9  && < 4.10
    , data-default >= 0.7  && < 0.8
    , ghcjs-dom
    , lens         >= 4.14 && < 4.15
    , mtl          >= 2.2  && < 2.3
    , reflex       >= 0.5  && < 0.6
    , reflex-dom   >= 0.4  && < 0.5
    , text         >= 1.2  && < 1.3
    , time         >= 1.6  && < 1.8
  
  
  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends: ghcjs-base
  else
    hs-source-dirs: src-ghc

  ghc-options: -Wall -fno-warn-unused-do-bind

  default-language:    Haskell2010
  default-extensions:
    CPP
  
test-suite example
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    example
  default-language:  Haskell2010
  default-extensions:
    CPP

  build-depends:
      base
    , reflex
    , reflex-dom
    , reflex-dhtmlx
    , text

source-repository head
  type: git
  location: https://github.com/TaktInc/reflex-dhtmlx