name:                reflex-dhtmlx
version:             0.1
synopsis:            Reflex wrapper for DHTMLX widgets
-- description:
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          info@takt.com
copyright:           Takt Inc
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  include-dirs:        include
  js-sources:
    -- Order is important (the reverse of what you think)
    -- removing this so we can lazy load the js source to have
    -- it skip google cc
    -- lib/dhtmlxcalendar.js
  exposed-modules:
    Reflex.Dom.DHTMLX.Date
    Reflex.Dom.DHTMLX.DateTime

  other-modules:
    Reflex.Dom.DHTMLX.Common

  build-depends:
      base            >= 4.9  && < 4.12
    , containers      >= 0.5  && < 0.6
    , data-default    >= 0.7  && < 0.8
    , ghcjs-dom
    , jsaddle         >= 0.9.3 && < 0.10
    , lens            >= 4.14 && < 4.17
    , mtl             >= 2.2  && < 2.3
    , reflex          >= 0.5  && < 0.7
    , reflex-dom-core >= 0.4  && < 0.6
    , text            >= 1.2  && < 1.3
    , time            >= 1.6  && < 1.9
    , tz              >= 0.1  && < 0.2

  ghc-options: -Wall -fno-warn-unused-do-bind

  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/TaktInc/reflex-dhtmlx
